force-app/main/default/objects/Account/fields/Close_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Close_Lead_Id__c</fullName>
    <label>Close Lead ID</label>
    <inlineHelpText>External ID from Close CRM. Upsert key for the Account migration + trace to the source Close record.</inlineHelpText>
    <externalId>true</externalId>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>