force-app/main/default/objects/Account/fields/Date_of_App__c.field-meta.xml
<CustomField>
    <fullName>Date_of_App__c</fullName>
    <label>Date of App</label>
    <type>Date</type>
</CustomField>