force-app/main/default/objects/Account/fields/Date_of_Filing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Filing__c</fullName>
    <label>Date of Filing</label>
    <type>Date</type>
</CustomField>