force-app/main/default/objects/Account/fields/Debt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debt_Amount__c</fullName>
    <label>Debt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>