force-app/main/default/objects/Account/fields/Lender_3__c.field-meta.xml
<CustomField>
    <fullName>Lender_3__c</fullName>
    <label>Lender 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>