force-app/main/default/objects/Account/fields/Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Number_Type__c</fullName>
    <label>Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>VoIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>