force-app/main/default/objects/Account/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <label>Owner Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>