force-app/main/default/objects/Account/fields/Payment_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_2__c</fullName>
    <label>Payment 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>