force-app/main/default/objects/Account/listViews/My_Clients.listView-meta.xml
<ListView>
    <fullName>My_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Debt_Amount__c</columns>
    <columns>Total_Positions__c</columns>
    <columns>Business_Start_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Clients</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>